--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:600,700,800|Roboto:300,400,700&display=swap" rel="stylesheet">
 	
 	<!-- FontAwesome JS-->
-	<script defer src="assets/fontawesome/js/all.min.js"></script>
+	<script defer src="fontawesome/js/all.min.js"></script>
 
 	<!-- Theme CSS -->  
-	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
+	<link id="theme-style" rel="stylesheet" href="css/theme.css">
 	
 <style>
 #wrap {
@@ -34,7 +34,7 @@
 }
 
 #hero-block {
-    background-image: url('assets/background.png');
+    background-image: url('background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -59,7 +59,7 @@
 							<div class="hero-intro mb-4">BenchSys 2024</div>
 							</a>
 						</div-->
-						<!--a class="scrollto" href="#hero-block"><img class="logo-icon" src="assets/images/logo-white1.svg" alt="logo"></a-->
+						<!--a class="scrollto" href="#hero-block"><img class="logo-icon" src="images/logo-white1.svg" alt="logo"></a-->
 					</div>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
@@ -415,7 +415,7 @@
                 <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px;">
                     <div class="card rounded-0">
                         <a href="https://www.sydney.edu.au/architecture/about/our-people/academic-staff/chirag-deb.html" target="_blank">
-                            <img src="assets/Chirag1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="Chirag Deb">
+                            <img src="Chirag1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="Chirag Deb">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title mb-2">Chirag Deb</h5>
@@ -431,7 +431,7 @@
                 <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px;">
                     <div class="card rounded-0">
                         <a href="https://sustainability-accelerator.stanford.edu/people/jeslu-jacob" target="_blank">
-                            <img src="assets/Jeslu1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="Jeslu Jacob">
+                            <img src="Jeslu1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="Jeslu Jacob">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title mb-2">Jeslu Jacob</h5>
@@ -447,7 +447,7 @@
                 <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px;">
                     <div class="card rounded-0">
                         <a href="https://www.iitbhu.ac.in/dept/apd/people/kirankumardevsapd" target="_blank">
-                            <img src="assets/Kiran1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="E V S Kiran Kumar Donthu">
+                            <img src="Kiran1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="E V S Kiran Kumar Donthu">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title mb-2">E V S Kiran Kumar Donthu</h5>
@@ -463,7 +463,7 @@
                 <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px;">
                     <div class="card rounded-0">
                         <a href="https://www.samy101.com" target="_blank">
-                            <img src="assets/Samy1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="Pandarasamy Arjunan">
+                            <img src="Samy1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="Pandarasamy Arjunan">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title mb-2">Pandarasamy Arjunan</h5>
@@ -479,7 +479,7 @@
                 <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px;">
                     <div class="card rounded-0">
                         <a href="https://www.iitkgp.ac.in/department/AR/faculty/ar-prashantanand" target="_blank">
-                            <img src="assets/Prashant1.jpg" class="card-img-top profile-image rounded-circle mb-2 small-diameter" style="width: 130px; height: 130px;" alt="Prashant Anand">
+                            <img src="Prashant1.jpg" class="card-img-top profile-image rounded-circle mb-2 small-diameter" style="width: 130px; height: 130px;" alt="Prashant Anand">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title mb-2">Prashant Anand</h5>
@@ -646,11 +646,11 @@
 	</footer>
 	
 	<!-- Javascript -->          
-	<script src="assets/plugins/popper.min.js"></script>
-	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>  
-	<script src="assets/plugins/smoothscroll.min.js"></script>
-	<script src="assets/plugins/gumshoe/gumshoe.polyfills.min.js"></script> 
-	<script src="assets/js/main.js"></script>  
+	<script src="plugins/popper.min.js"></script>
+	<script src="plugins/bootstrap/js/bootstrap.min.js"></script>  
+	<script src="plugins/smoothscroll.min.js"></script>
+	<script src="plugins/gumshoe/gumshoe.polyfills.min.js"></script> 
+	<script src="js/main.js"></script>  
 
 </body>
 </html> 
