--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>BenchSys 2025</title>
+	<title>BenchSys 2026</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="The 4th ACM International Workshop on Advancements in Building Performance Simulation and Benchmarking Systems">
+	<meta name="description" content="The 5th ACM International Workshop on Advancements in Building Performance Simulation and Benchmarking Systems">
 	<link rel="shortcut icon" href="favicon.ico"> 
 	
 	<!-- Google Font -->
@@ -191,10 +191,10 @@
 				<h4 class="mb-2 text-center mb-3">Important Dates</h4>
 				<div class="benefits-list text-center mb-3">				
 					<ul class="list-unstyled text-start d-inline-block">
-					    <li><i class="far fa-calendar-alt me-2"></i><strong>Paper submission: October 2nd, 2025 (AOE)</strong></li>
-						<li><i class="far fa-calendar-alt me-2"></i><strong>Notifications: October 12th, 2025 (AOE)</strong></li>
-						<li><i class="far fa-calendar-alt me-2"></i><strong>Camera-ready: October 17th, 2025 (AOE)</strong></li>
-						<li><i class="far fa-calendar-alt me-2"></i><strong>Workshop: during November 20-21, 2025 </strong></li>
+					    <li><i class="far fa-calendar-alt me-2"></i><strong>Paper submission: March 30, 2026 (AOE)</strong></li>
+						<li><i class="far fa-calendar-alt me-2"></i><strong>Notifications: April 15th, 2026 (AOE)</strong></li>
+						<li><i class="far fa-calendar-alt me-2"></i><strong>Camera-ready: April 30th, 2026 (AOE)</strong></li>
+						<li><i class="far fa-calendar-alt me-2"></i><strong>Workshop: June 22–25, 2026, in Banff, Canada, as part of the ACM Sustainability Week 2026. </strong></li>
 					</ul>
 				</div><!--//benefits-list-->
 			</div>
@@ -202,205 +202,7 @@
 	</section><!--//cfp-section-->	
 	
         
-
-<section id="program" class="schedule-section section theme-bg-light">
-    <div class="container">
-        <h3 class="section-heading text-center mb-5">Program</h3>
-
-        <p><i>*All times are local (Golden, Colorado — MST, UTC −7 hrs) and IST (UTC +5:30)</i></p>
-
-        <div class="schedule-tab-content tab-content" style="display: flex; justify-content: center;">
-            <div class="tab-pane active" id="tab-1-content" role="tabpanel" aria-labelledby="tab-1">
-
-                <!-- Registration -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3">7:30 – 8:30 (IST: 20:00 – 21:00)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">Registration & Breakfast</h5>
-                        <p>Participant check-in and informal networking</p>
-                    </div>
-                </div>
-
-                <!-- Opening Remarks -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3">8:30 – 8:45 (IST: 21:00 – 21:15)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">Opening Remarks</h5>
-                        <p>Welcome address and overview of the workshop</p>
-                    </div>
-                </div>
-
-                <!-- Keynote Talk -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3">8:45 – 9:15 (IST: 21:15 – 21:45)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">Keynote Talk</h5>
-                        <p><strong>Speaker:</strong> Joy Sen, IIT Kharagpur <br>
-                           <strong>Topic:</strong> cybernetics, advancement of scientific thought, systems theory, and the evolution of benchmarking frameworks </p>
-                    </div>
-                </div>
-
-                <!-- Session I -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3">9:15 – 10:00 (IST: 21:45 – 22:30)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">Conference Paper Session I — Indoor Air Quality, HVAC & Comfort</h5>
-                        <ul>
-                            <li>
-                                <strong>Paper #1:</strong> Indoor Environmental Quality in Split Air-Conditioned Classroom<br>
-                                <i>Authors: A. Nair, P. Anand, A. Mahdavi</i><br>
-                                <span class="time">9:15 – 9:30 (IST: 21:45 – 22:00)</span>
-                            </li>
-
-                            <li>
-                                <strong>Paper #4:</strong> Energy and Indoor Air Quality Tradeoffs…<br>
-                                <i>Authors: R. Agarwal, V. Garg, A. Bhatia</i><br>
-                                <span class="time">9:30 – 9:45 (IST: 22:00 – 22:15)</span>
-                            </li>
-
-                            <li>
-                                <strong>Paper #8:</strong> From Innovation to Implementation…<br>
-                                <i>Authors: J. Jacob, R. Jain</i><br>
-                                <span class="time">9:45 – 9:55 (IST: 22:15 – 22:25)</span>
-                            </li>
-                        </ul>
-
-                        <p><strong>9:55 – 10:00 (IST: 22:25 – 22:30):</strong> Transition</p>
-                    </div>
-                </div>
-
-                <!-- Coffee Break -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3" style="color:#5598CD;">10:00 – 10:15 (IST: 22:30 – 22:45)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">☕ Coffee Break</h5>
-                        <p>Networking & refreshments</p>
-                    </div>
-                </div>
-
-                <!-- Invited Paper -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3">10:15 – 10:35 (IST: 22:45 – 23:05)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">Invited Paper Presentation</h5>
-                        <p><strong>Speaker:</strong> Joshua Neutel<br>
-                           <i>Relatively Few “Dominant” Zones Drive Energy Savings…</i></p>
-                    </div>
-                </div>
-
-                <!-- Session II -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3">10:35 – 11:35 (IST: 23:05 – 00:05)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">Conference Paper Session II — Energy, AI & Decarbonisation</h5>
-
-                        <ul>
-                            <li>
-                                <strong>Paper #3:</strong> How Realistic are Synthetic Energy Data?<br>
-                                <i>Authors: N. Demir et al.</i><br>
-                                <span class="time">10:35 – 10:50 (IST: 23:05 – 23:20)</span>
-                            </li>
-
-                            <li>
-                                <strong>Paper #6:</strong> AI-enabled Phase Equilibrium Prediction…<br>
-                                <i>Authors: E. Kurian, P. Sandilya</i><br>
-                                <span class="time">10:50 – 11:05 (IST: 23:20 – 23:35)</span>
-                            </li>
-
-                            <li>
-                                <strong>Paper #2:</strong> Zeki: A Containerized Pipeline…<br>
-                                <i>Authors: S. Farjad, R. Gandhi</i><br>
-                                <span class="time">11:05 – 11:20 (IST: 23:35 – 23:50)</span>
-                            </li>
-
-                            <li>
-                                <strong>Paper #7:</strong> Phantom Load…<br>
-                                <i>Authors: J. Jacob, P. Vaidya</i><br>
-                                <span class="time">11:20 – 11:35 (IST: 23:50 – 00:05)</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Panel -->
-                <div class="item item-talk">
-                    <div class="meta">
-                        <h5 class="time mb-3">11:45 – 12:00 (IST: 00:15 – 00:30)</h5>
-                    </div>
-                    <div class="content">
-                        <h5 class="title mb-3">Panel Discussion & Closing Remarks</h5>
-                        <p>Wrap-up, reflections from session chairs, and next steps</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-</section>
-
-<<section id="speakers" class="speakers-section section theme-bg-white">
-  <div class="container">
-    <h3 class="section-heading text-center mb-3">Keynote Speaker</h3>
-
-    <div class="mb-3 text-left">
-      <!-- Speaker: Joy Sen -->
-      <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px; width: 100%;">
-        <div class="rounded-0">
-
-          <!-- Centered Image -->
-          <div style="text-align: center;">
-            <a href="#">
-              <img src="JoySen.jpg" 
-                   class="card-img-top profile-image rounded-circle mb-2" 
-                   style="width: 20%; display: inline-block;" 
-                   alt="Joy Sen">
-            </a>
-          </div>
-
-          <!-- Added Bold Name + Designation Below Image -->
-          <div class="text-center">
-            <strong>Joy Sen (Professor at IIT Kharagpur)</strong>
-          </div>
-
-          <div class="card-body">
-            <div class="card-text mb-3">
-              <h5 class="title mb-3 text-center"></h5>
-              <div class="meta text-center">
-                <br>
-                Joy Sen is a prominent Professor of Architecture and Regional Planning at IIT Kharagpur. 
-                He is widely recognized for his expertise in community and regional planning, 
-                heritage studies, and the integration of Indian knowledge systems into modern 
-                architecture and design.
-              </div>
-              <br>
-            </div>
-          </div>
-
-        </div>
-      </div>  
-    </div>
-
-  </div>
-</section>
-
-
-
-	 
+ 
 </section>
 
 	
@@ -459,8 +261,8 @@
                     </div>
                 </div>
 
-                <!-- Pandarasamy Arjunan -->
-                <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px;">
+                <!-- <!-- Pandarasamy Arjunan -->
+                <!-- <div class="left col-6 col-lg-2 mb-4" style="display: inline-block; margin-right: 20px;">
                     <div class="card rounded-0">
                         <a href="https://www.samy101.com" target="_blank">
                             <img src="Samy1.jpg" class="card-img-top profile-image rounded-circle mb-2" style="width: 130px; height: 130px;" alt="Pandarasamy Arjunan">
