--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 		<div class="hero-block-mask"></div>
 		<div class="container">
 			<div class="hero-text-block" style="max-width: 600px;">
-				<h1 class="hero-heading mb-2">AI4_BenchSys 2025</h1>
-				<div class="hero-intro mb-4">The 4th ACM International Workshop on Advancements in Building Performance Simulation and Benchmarking Systems</div>
+				<h1 class="hero-heading mb-2">AI4_BenchSys 2026</h1>
+				<div class="hero-intro mb-4">The 5th ACM International Workshop on Advancements in Building Performance Simulation and Benchmarking Systems</div>
 				<div class="hero-intro mb-4">(A BuildSys 2025 Workshop)</div>												
 				<div class="hero-meta mb-3"><i class="far fa-calendar-alt me-2"></i>					
-				November 20-21, 2025<br> <i class="fas fa-map-marker-alt mx-2"></i>Golden, Colorado, USA</div>
+				November 20-21, 2025<br> <i class="fas fa-map-marker-alt mx-2"></i>Banff, Canada, as part of the ACM Sustainability Week 2026</div>
 				<!--li style="list-style: none;">
                                     <strong>
                                         Register through: <a href="https://sensys.acm.org/2023/registration/"target="_blank" style="font-size: 18px; color: white; text-decoration: underline;">https://sensys.acm.org/2023/registration/</a>
