--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
         <h3 class="section-heading text-center mb-5">Previous BenchSys</h3>
         <div class="section-intro text-center mx-auto mb-5">
             <ul class="list-unstyled">
+				<li><a href="https://benchsys.github.io/2025/" target="_blank">BenchSys 2025</a></li>
                 <li><a href="https://benchsys.github.io/2024/" target="_blank">BenchSys 2024</a></li>
                 <li><a href="https://benchsys.github.io/2023/" target="_blank">BenchSys 2023</a></li>
                 <li><a href="https://benchsys.github.io/2022/" target="_blank">BenchSys 2022</a></li>
